fix(editor): Toggle not visible in credentials modal, page background, info icon and expression switch background (no-changelog) (#9004)

--- a/packages/design-system/src/css/_tokens.scss
+++ b/packages/design-system/src/css/_tokens.scss
@@ -239,6 +239,7 @@
 	--color-callout-secondary-icon: var(--color-secondary);
 
 	// Dialogs and overlays
+	--color-dialog-background: var(--prim-gray-0);
 	--color-dialog-overlay-background: var(--prim-gray-0-alpha-075);
 	--color-dialog-overlay-background-dark: var(--prim-color-alt-j-alpha-075);
 	--color-block-ui-overlay: var(--prim-gray-820);
@@ -252,9 +253,11 @@
 
 	// Action Dropdown
 	--color-action-dropdown-item-active-background: var(--color-background-base);
+
 	// Switch (Activation, boolean)
 	--color-switch-background: var(--prim-gray-420);
 	--color-switch-active-background: var(--prim-color-alt-i);
+	--color-switch-border-color: transparent;
 	--color-switch-toggle: var(--prim-gray-0);
 
 	// Feature Request
